Issue #690 & #707 - Fixes for side nav fonts and spacings

--- a/assets/scss/pages/_standard-page.scss
+++ b/assets/scss/pages/_standard-page.scss
@@ -2,7 +2,8 @@
     padding-bottom: 89px;
     margin: $nav-desktop-height auto 0;
 
-    @include breakpoint(large down) {
+    @include breakpoint(medium down) {
+        overflow: hidden;
         padding: 26px 0 67px;
         margin-top: $nav-mobile-height;
     }
